# MLAutoScheduler

./: .gitignore  .gitmodules  CMakeLists.txt  NEED.md  README.md  acceleration.txt  acceleration_graph.py  conv2d_benchmark_exhustiveEval.json  main.cpp  matmul_benchmark_eval.json  perf.ipynb  perf.py  performanceResults.txt  performance_graph.py  runPerformance.sh  script.sh
benchmarks/: conv1d.mlir  conv1d.py  conv2d.mlir  conv2d.py  conv2d_nhwc_hwcf.mlir  conv2d_nhwc_hwcf.py  conv2dsimple.mlir  conv3d.mlir  conv3d.py  matmul.mlir  matmul.py  matmul_best.mlir  pooling_nhwc_max.mlir  pooling_nhwc_max.py
benchmarks/NNs/: alexnet.mlir  alexnet.py  bigger_NN.py  bigger_nn.mlir  bigger_nn_copy.mlir  bigger_nn_copy_bufferized.mlir  bigger_nn_img2col.mlir  full_example_x18.mlir  nn.mlir  nn.py  resnet18.mlir  resnet18.py  simple_nn.mlir  vgg.mlir  vgg11.py  vgg11_img2col.mlir
include/: BeamSearch.h  CMakeLists.txt  EvaluationByExecution.h  InterchangeTransformation.h  MLIRCodeIR.h  ParallelizationTransformation.h  SearchMethod.h  TilingTransformation.h  TransformDialectInterpreter.h  TransformInterpreterPassBase.h  Utils.h  VectorizationTransformation.h
include/CustomPasses/: CMakeLists.txt  ForEachThreadLowering.h  Passes.h  Passes.td
scripts/: script_2conv2D_nhwc .sh  script_3mm.sh  script_alexnet.sh  script_conv2D.sh  script_conv2D_interchange.sh  script_conv2D_nhwc.sh  script_conv2d_1024.sh  script_conv2d_2048.sh  script_conv2d_downsample.sh  script_img2col.sh  script_matmul.sh  script_nn.sh  script_nn_big.sh  script_nn_big_img2col.sh  script_pooling_nchw_max.sh  script_resnet18.sh  script_vgg.sh
src/: BeamSearch.cpp  EvaluationByExecution.cpp  InterchangeTransformation.cpp  MLIRCodeIR.cpp  ParallelizationTransformation.cpp  TilingTransformation.cpp  TransformDialectInterpreter.cpp  TransformInterpreterPassBase.cpp  Utils.cpp  VectorizationTransformation.cpp
src/CustomPasses/: ForEachThreadLowering.cpp
torch_models_to_ MLIR/: convert.sh  example.ipynb  execute.sh  touchup.py  wrap.py
